# cmake_vscode

./: README.md
cmake_file_version/: CMakeLists.txt  tutor.cpp
cmake_test/: CMakeLists.txt  main_first.cpp
cmake_use_lib/: CMakeLists.txt  tutorial.cpp
cmake_use_lib/mathFunc/: CMakeLists.txt  mathFunc.h  mysqrt.cpp
